@@ -673,6 +673,24 @@ initcups (void)
   INT_CONSTANT (IPP_ATTRIBUTE);
   INT_CONSTANT (IPP_DATA);
 
+  // IPP attribute tags
+  INT_CONSTANT (IPP_TAG_ZERO);
+  INT_CONSTANT (IPP_TAG_OPERATION);
+  INT_CONSTANT (IPP_TAG_JOB);
+  INT_CONSTANT (IPP_TAG_PRINTER);
+  INT_CONSTANT (IPP_TAG_INTEGER);
+  INT_CONSTANT (IPP_TAG_BOOLEAN);
+  INT_CONSTANT (IPP_TAG_ENUM);
+  INT_CONSTANT (IPP_TAG_STRING);
+  INT_CONSTANT (IPP_TAG_RANGE);
+  INT_CONSTANT (IPP_TAG_TEXT);
+  INT_CONSTANT (IPP_TAG_NAME);
+  INT_CONSTANT (IPP_TAG_KEYWORD);
+  INT_CONSTANT (IPP_TAG_URI);
+  INT_CONSTANT (IPP_TAG_CHARSET);
+  INT_CONSTANT (IPP_TAG_LANGUAGE);
+  INT_CONSTANT (IPP_TAG_MIMETYPE);
+
   // Limits
   INT_CONSTANT (IPP_MAX_NAME);
 
